--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,14 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Project Management App</title>
-    <!-- Bootstrap -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    /> -->
+    <title>Timefly</title>
 
     <!-- Progress Bar -->
     <link
@@ -32,7 +25,6 @@
   <body>
     <noscript> </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
